# PostQuantum-DualUSB-Token-Library

./:  - Copy.gitignore  .gitignore  AI_COMMENTS_REMOVAL.md  ARCHITECTURAL_CODE_SNIPPETS.txt  ARCHITECTURAL_VERIFICATION_REPORT.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  FULL_LIBRARY_SECURITY_AUDIT.md  GITHUB_RELEASE_DESCRIPTION.md  GITHUB_RELEASE_GUIDE.md  GITHUB_RELEASE_NOTES.md  GITHUB_RELEASE_NOTES_v0.1.1.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS.md  LIBRARY_QUICKSTART.md  LIBRARY_README.md  MANIFEST.in  PYPI_README.md  README.md  README_OLD.md  README_WITH_EMOJIS_ARCHIVE.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.docx  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.4.md  RELEASE_NOTES_v0.15.0.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_AUDIT_SUMMARY.md  SIDE_CHANNEL_IMPLEMENTATION_SUMMARY.md  SIDE_CHANNEL_PROTECTION.md  USAGE_AS_LIBRARY.md  WHITEPAPER.docx  WHITEPAPER.md  WHITEPAPER_COMPLETE - Copy.md  WHITEPAPER_COMPLETE.docx  WHITEPAPER_COMPLETE.md  WHITEPAPER_ENHANCED.md  additional_security_checks.py  (+28 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report - Copy.md  feature_request - Copy.md  security_discussion - Copy.md
.github/workflows/: publish.yml
docs/: README.md
dual_usb_backup/: __init__.py  config.py  exceptions.py
pqcdualusb/: __init__.py  __main__.py  audit.py  backup.py  cli.py  crypto.py  device.py  exceptions.py  pqc.py  security.py  storage.py  usb.py  utils.py
pqcdualusb/tests/: __init__.py  test_basic.py
tests/: conftest.py  test_security.py
