[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pqcdualusb"
version = "0.1.0"
description = "Post-quantum dual USB backup library with enterprise security"
authors = [
    { name = "Johnson Ajibi", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["security", "backup", "usb", "cryptography", "post-quantum"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Archiving :: Backup",
]

dependencies = [
    "cryptography>=3.4.8",
    "argon2-cffi>=21.3.0",
]

[project.optional-dependencies]
pqc = ["python-oqs>=0.7.0"]
dev = [
    "pytest>=6.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "ruff>=0.1.0",
    "mypy>=0.991",
]

[project.urls]
Homepage = "https://github.com/Johnsonajibi/PostQuantum-DualUSB-Token-Library"
Repository = "https://github.com/Johnsonajibi/PostQuantum-DualUSB-Token-Library"
Issues = "https://github.com/Johnsonajibi/PostQuantum-DualUSB-Token-Library/issues"

[project.scripts]
pqcdualusb = "dual_usb_backup:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dual_usb_backup*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
target-version = "py38"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
